feat: Add support for all manual mode functions

--- a/src/components/layout/Footer.module.scss
+++ b/src/components/layout/Footer.module.scss
@@ -1,5 +1,5 @@
 .footer {
-    padding-bottom: 1rem;
+    padding: 0 1rem 1rem 1rem;
     background-color: var(--color-neutral-300);
     font-size: 0.9rem;
 
