feat: Add some basic styling to Manual page

--- a/src/components/HandyConnection.module.scss
+++ b/src/components/HandyConnection.module.scss
@@ -33,7 +33,9 @@
         font-size: 1rem;
         background-color: var(--color-theme-500);
         border: 0;
-        border-radius: 5px;
+        border-radius: 2px;
+        padding: 0.25rem 0.5rem;
+        color: var(--color-neutral-100);
     }
 }
 
