--- a/src/pages/Manual.module.scss
+++ b/src/pages/Manual.module.scss
@@ -16,6 +16,17 @@
         padding: 0.25rem 0.5rem;
         color: var(--color-neutral-100);
         margin-right: 1rem;
+        cursor: pointer;
+        transition: all 0.2s;
+
+        &:hover {
+            background-color: var(--color-theme-700);
+        }
+
+        &:active {
+            background-color: var(--color-blue-700);
+            transition: none;
+        }
     }
 
     input[type="checkbox"] {
