--- a/src/components/layout/Navbar.module.scss
+++ b/src/components/layout/Navbar.module.scss
@@ -13,6 +13,8 @@
     align-items: center;
     height: 100%;
 
+    box-shadow: 0px 0px 10px 0px black;
+
     a,
     button {
         display: flex;
@@ -46,6 +48,13 @@
         height: var(--navbar-height);
 
         list-style: none;
+
+        p {
+            margin: 0;
+            display: grid;
+            place-items: center;
+            height: 100%;
+        }
     }
 
     li {
