--- a/src/vars.scss
+++ b/src/vars.scss
@@ -47,4 +47,6 @@
     --color-purple-500: #9821f3;
     --color-purple-600: #ae4ef7;
     --color-purple-700: #d884fe;
+
+    --breakpoint-stacked: 1000px;
 }
