feat: Improve VideoPlayer immensely + add auto-version display

--- a/src/components/layout/Navbar.module.scss
+++ b/src/components/layout/Navbar.module.scss
@@ -85,7 +85,7 @@
 
 .versionNumber {
     font-weight: 400;
-    margin-left: 1em;
+    margin-left: 0.5rem;
     font-size: 0.7em;
     margin-top: 0.4em;
 }
