--- a/src/pages/Play.module.scss
+++ b/src/pages/Play.module.scss
@@ -75,30 +75,16 @@
     }
 }
 
-//-----------------------------------PLAYER
-
-.player {
-    background-color: black;
-    position: relative;
-    height: 50%;
-
-    video {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        min-width: 100%;
-        min-height: 100%;
-        overflow: hidden;
-        background-size: cover;
-    }
-}
-
 //-----------------------------------PREPARING
+
+.preparingPlayer {
+    width: 100%;
+    position: relative;
+}
 
 .preparing {
     width: 100%;
+    height: 100%;
     display: grid;
     place-items: center;
 
@@ -130,6 +116,37 @@
         background-color: var(--color-theme-500);
         transition: all 0.3s;
     }
+}
+
+//-----------------------------------PLAYER
+
+.player {
+    background-color: black;
+    position: relative;
+    height: 100%;
+
+    video {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        min-width: 100%;
+        min-height: 100%;
+        overflow: hidden;
+        background-size: cover;
+    }
+}
+
+//----------------------------------PREVIEW
+
+.preview {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
 }
 
 //-----------------------------------CONTROLS
