--- a/src/controls.scss
+++ b/src/controls.scss
@@ -51,3 +51,99 @@ button {
         background-position: 50px 50px;
     }
 }
+
+input[type="range"] {
+    background: transparent;
+    border: none;
+    -webkit-appearance: none;
+
+    &::-moz-focus-outer {
+        border: 0;
+    }
+
+    &::-moz-range-thumb {
+        cursor: pointer;
+        background-color: var(--color-theme-500);
+        border: none;
+        transition: all 0.3s;
+        height: 1rem;
+        width: 1rem;
+        border-radius: 50%;
+
+        &:hover {
+            background-color: white;
+        }
+    }
+
+    &::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        margin-top: calc(-0.5rem + 1.5px);
+
+        cursor: pointer;
+        background-color: var(--color-theme-500);
+        border: none;
+        transition: all 0.3s;
+        height: 1rem;
+        width: 1rem;
+        border-radius: 50%;
+
+        &:hover {
+            background-color: white;
+        }
+    }
+
+    &::-ms-thumb {
+        cursor: pointer;
+        background-color: var(--color-theme-500);
+        border: none;
+        transition: all 0.3s;
+        height: 1rem;
+        width: 1rem;
+        border-radius: 50%;
+
+        &:hover {
+            background-color: white;
+        }
+    }
+
+    &::-webkit-slider-runnable-track {
+        height: 3px;
+        cursor: pointer;
+        background: var(--color-neutral-800);
+        border-radius: 2px;
+    }
+
+    &:focus::-webkit-slider-runnable-track {
+        background: var(--color-neutral-800);
+    }
+
+    &::-moz-range-track {
+        height: 3px;
+        cursor: pointer;
+        background: var(--color-neutral-800);
+        border-radius: 2px;
+    }
+
+    &::-ms-track {
+        height: 3px;
+        cursor: pointer;
+        background: transparent;
+        border-color: transparent;
+        border-width: 6px 0;
+        color: transparent;
+    }
+    &::-ms-fill-lower {
+        background: var(--color-neutral-800);
+        border-radius: 2px;
+    }
+    &:focus::-ms-fill-lower {
+        background: var(--color-neutral-800);
+    }
+    &::-ms-fill-upper {
+        background: var(--color-neutral-800);
+        border-radius: 2px;
+    }
+    &:focus::-ms-fill-upper {
+        background: var(--color-neutral-800);
+    }
+}
