--- a/src/components/layout/Sidebar.module.scss
+++ b/src/components/layout/Sidebar.module.scss
@@ -56,11 +56,14 @@
 }
 
 .navIcon {
+    width: 1.5rem;
     color: var(--color-text);
     font-size: 1.5rem;
     margin-right: 1rem;
     position: relative;
     top: 1px;
+    display: grid;
+    place-items: center;
 }
 
 .navText {
