feat: Add GitHub link to header

--- a/src/components/layout/Header.module.scss
+++ b/src/components/layout/Header.module.scss
@@ -89,3 +89,11 @@
     font-size: 0.7em;
     margin-top: 0.4em;
 }
+
+.github {
+
+    > svg {
+        color: white;
+        font-size: 1.5rem;
+    }
+}
