--- a/src/pages/Auto.module.scss
+++ b/src/pages/Auto.module.scss
@@ -59,6 +59,6 @@
 
     p {
         margin: 0;
-        text-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+        text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
     }
 }
