--- a/src/components/layout/Sidebar.module.scss
+++ b/src/components/layout/Sidebar.module.scss
@@ -38,6 +38,11 @@
     }
 }
 
+.sidebarNavFooter {
+    border-top: 1px solid var(--color-neutral-500);
+    margin-bottom: 1rem;
+}
+
 .selected a {
     background-color: var(--color-neutral-200);
     overflow: hidden;
