feat: Allow for live funscript preview during video playback
+ Note - this doesn't work in fullscreen
+ Also, I made some style improvements to the FunscriptPreview thing in general

--- a/src/components/controls/VideoPlayer.module.scss
+++ b/src/components/controls/VideoPlayer.module.scss
@@ -11,6 +11,8 @@
     width: 100%;
     height: 2rem;
 
+    padding: 0 0.5rem;
+
     background: -moz-linear-gradient(
         top,
         rgba(0, 0, 0, 0) 0%,
@@ -29,7 +31,7 @@
 
     transition: bottom 0.5s;
 
-    div {
+    .duration {
         display: grid;
         place-items: center;
         height: 100%;
@@ -146,14 +148,22 @@
         svg {
             font-size: 1.5rem;
         }
+    }
 
-        &:last-child {
-            margin: 0 1rem;
-        }
-        &:first-child {
-            margin-left: 1rem;
+    button.active {
+        background-color: var(--color-theme-500);
+
+        &:hover {
+            background-color: var(--color-theme-700);
+            color: black;
         }
     }
+}
+
+.buttons {
+    display: flex;
+    margin-left: 0.5rem;
+    gap: 0.5rem;
 }
 
 .minimalOverlay {
