--- a/src/pages/Changelog.module.scss
+++ b/src/pages/Changelog.module.scss
@@ -1,5 +1,6 @@
 .changelog {
     border-top: 1px solid var(--color-neutral-600);
+    padding-left: 1rem;
 
     > div {
         padding: 0 1rem 1rem 1rem;
@@ -12,7 +13,15 @@
         margin: 1rem 0 0 0;
     }
     h3 {
+        margin: 0 0 0.5rem 0;
+        font-size: 0.9rem;
+        font-style: italic;
+        color: var(--color-neutral-800);
+        font-weight: normal;
+    }
+    h4 {
         margin-bottom: 0.5rem;
+        font-size: 1.2rem;
     }
     ul {
         margin-bottom: 1rem;
@@ -23,11 +32,8 @@
     li {
         margin-bottom: 0.25rem;
     }
-}
 
-.date {
-    margin: 0 0 0.5rem 0;
-    font-size: 0.9rem;
-    font-style: italic;
-    color: var(--color-neutral-800);
+    hr {
+        margin: 2rem 0 2rem 0;
+    }
 }
